--- a/todo
+++ b/todo
@@ -9,6 +9,7 @@ effect test of morton order on intersect
 parallelize
 
 extents for AABB
+alginment
 
 
 ===============================================================================
