--- a/todo
+++ b/todo
@@ -1,8 +1,9 @@
+
+
 struct to class
 Log with multiple arguments to the functions, which automatically call toStgring
 
-
-
+Re-add the requirements non-spack installed
 
 
 Scripts to install gcc
