WIP: debugging conditional jump dependent on uninit value in reading xslib

--- a/todo
+++ b/todo
@@ -1,3 +1,5 @@
+Find the conditional jump that depends on uninitialized value in xsec read
+
 Add material convenience functions that openMC has
 
 Function for plotting XSecs
