--- a/todo
+++ b/todo
@@ -1,3 +1,4 @@
+std::isfinite assumes
 Find the conditional jump that depends on uninitialized value in xsec read
 
 Add material convenience functions that openMC has
