WIP: string/vector fix

--- a/todo
+++ b/todo
@@ -1,3 +1,14 @@
+use cppreference organization scheme for classes
+
+SSO option
+
+
+operator=(String const & s)
+__copy_assign_alloc
+
+
+// Comment all the string methods
+
 Make string resemble llvm more
 
 eliminate sto
