BMI2 check + SIMD bugfix

--- a/todo
+++ b/todo
@@ -1,3 +1,17 @@
+cross
+distanceTo
+squaredDistanceTo
+
+conversion from simd to vec
+
+just encapsulate and override warnings on addressing?
+  min, max
+  Otherwise a missed <D> could fuck things
+
+math
+
+PURE and ASSERTS/Log messages
+
 string functions
 string tests
 
